# thumbs-up

./: .gitignore  DEPLOYMENT.md  DOCKER-DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose-simple.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  readme.md  setup.sh  startup.py  thumbsup.service
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
Startup/: Start.py  config.env  smb_server.py  web_server.py
backend/: README.md  requirements.txt
backend/apiv2/: .env.example  .gitignore  Dockerfile  README.md  auth.py  docker-compose.yml  gen_selfsigned.py  generate_certs.py  mdns_advertiser.py  models.py  pyproject.toml  qr_generator.py  requirements.txt  server.py  setup.sh  start.sh  start_smb.sh  start_webserver.sh
backend/apiv2/certs/: README.md
backend/apiv2/core/: auth.py  server.py
backend/apiv2/services/: __main__.py  mdns_advertiser.py  smb_manager.py
backend/apiv2/templates/: admin_dashboard.html  admin_login.html  file_browser.html  first_setup.html  login.html  register.html
backend/apiv2/tests/: conftest.py  test_api.py  test_auth.py  test_models.py  test_utils.py
backend/apiv2/utils/: generate_certs.py
client/: package-lock.json
client-dist/: BUILD.md  README.md  build-deb.sh  build-windows.bat  installer.nsi  setup.py  version_info.txt
config/: dnsmasq.conf  hostapd.conf  terracrate-luks.service  terracrate.avahi-service  terracrate.service  thumbsup.avahi-service  thumbsup.service  wifi-check.sh  wifi-fallback.service
distribution/: .gitignore  BUILD.md  LICENSE  README.md  (+3 more)
(+223 files in other folders)
